# herox_desktop

./: README.md
herox_desktop/: CMakeLists.txt  package.xml
herox_viz/: CMakeLists.txt  package.xml
herox_viz/config/: calib.yaml  settings.yaml  tags.yaml
herox_viz/launch/: view_model.launch  view_robot.launch
herox_viz/rviz/: herox_navigation.rviz
rqt_herox_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_herox_dashboard/resource/: HeroxDashboard.ui
rqt_herox_dashboard/scripts/: rqt_herox_dashboard
rqt_herox_dashboard/src/rqt_herox_dashboard/: dashboard.py
rqt_herox_missioneditor/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_herox_missioneditor/resource/: HeroxMissionEditor.ui
rqt_herox_missioneditor/scripts/: rqt_herox_missioneditor
rqt_herox_missioneditor/src/rqt_herox_missioneditor/: missioneditor.py
