<?xml version="1.0"?>
<package>
  <name>herox_viz</name>
  <version>0.1.0</version>
  <description>Visualization launchers and helpers for the HEROX AMR platform.</description>

  <maintainer email="bernhard.vorhofer@tum.de">Bernhard Vorhofer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>herox_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
